Added Stable Video Diffusion workflow and initial panorama support

--- a/cog.yaml
+++ b/cog.yaml
@@ -22,7 +22,12 @@ build:
     - scipy
     - tqdm
     - psutil
+    - requests
     - websocket-client==1.6.3
+    - pyequilib
+    - opencv-python
+    - imageio-ffmpeg
+
 
 
 # predict.py defines how predictions are run on your model
